<resources>
    <string name="app_name">EPI</string>
    <string name="authorization">Авторизация</string>
    <string name="unique_number">Уникальный номер</string>
    <string name="enter_password">Введите пароль</string>
    <string name="select_work_mode">Выберите режим работы</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>

    <string name="alert_icon_description">Warning icon</string>
    <string name="alert_dialog_title">Ошибка</string>
    <string name="alert_dialog_message">Сообщение об ошибке</string>
    <string name="alert_dialog_positive_button">Ок</string>
    <string name="alert_dialog_negative_button">Отмена</string>

    <string name="arrangement_label_main">Расстановка</string>
    <string name="arrangement_date_text">Дата:</string>
    <string name="arrangement_time_text">Время:</string>
    <string name="arrangement_customer_text">Заказчик:</string>
    <string name="arrangement_contract_text">Договор СК</string>
    <string name="arrangement_object_text">Объект:</string>
    <string name="arrangement_plot_text">Участок:</string>
    <string name="arrangement_checkbox_notdivided_text">Объект не делится на участки</string>
    <string name="arrangement_contractor_text">Генподрядчик:</string>
    <string name="arrangement_repcontractor_text">Представитель Генподрядчика:</string>
    <string name="arrangement_repsskgp_text">Представитель ССК ПО (ГП):</string>
    <string name="arrangement_subcontractor_text">Субподрядчик:</string>
    <string name="arrangement_checkbox_contractorisempty_text">Субподрядчик отсутствует</string>
    <string name="arrangement_repsubcontractor_text">Представитель Субподрядчика:</string>
    <string name="arrangement_repssksub_text">Представитель ССК ПО (Суб):</string>
    <string name="arrangement_btn_previousreport_text">Предыдущий отчет</string>
    <string name="arrangement_btn_cleardata_text">Очистить все поля</string>
    <string name="all_fragments_btn_back">Назад</string>
    <string name="all_fragments_btn_next">Сохранить</string>

    <string name="control_label_main">Полевой контроль</string>
    <string name="control_label_second">Отчетность</string>
    <string name="control_date_text">Дата:</string>
    <string name="control_equipment_text">Название прибора /\nоборудования</string>
    <string name="control_checkbox_equipmentisempty">Прибор / Оборудование отсутствует</string>
    <string name="control_complexofwork_text">Комплекс работ</string>
    <string name="control_typeofwork_text">Вид работ</string>
    <string name="control_resultsofcontrol_text">Отчет о результатах инспекции</string>
    <string name="control_remarksofcontrol_text">Замечания к документации</string>
    <string name="control_checkbox_noviolations_text">Нет нарушений</string>
    <string name="control_btn_ordernumber_text">Получить № предписания</string>
    <string name="control_btn_addtypeofwork_text">Добавить вид работ</string>
    <string name="control_ordernumber_text">Номер\nпредписания</string>

    <string name="all_fragments_actions_text">Действия</string>

    <string name="transport_label_main">Транспорт</string>
    <string name="transport_checkbox_transportisabsent">Транспорт отсутствует</string>
    <string name="transport_executor_text">Исполнитель по транспорту</string>
    <string name="transport_contract_text">Договор по транспорту</string>
    <string name="transport_statenumber_text">Госномер</string>
    <string name="transport_startdate_text">Дата начала поездки</string>
    <string name="transport_starttime_text">Время начала поездки</string>
    <string name="transport_endtime_text">Время завершения поездки</string>
    <string name="transport_enddate_text">Дата завершения поездки</string>
    <string name="fix_volumes_label_main">Фиксация объемов</string>
    <string name="fix_volumes_btn_addplanvalue">Добавить Плановые значения</string>
    <string name="fix_volumes_label_second">Отчётность</string>
    <string name="fix_volumes_measures_text">Единицы измерения</string>
    <string name="fix_volumes_plan_text">План</string>
    <string name="fix_volumes_fact_text">Факт</string>
    <string name="fix_volumes_btn_addrow">Добавить запись</string>
    <string name="fix_volumes_projectvalue_text">Объем работ\nпо проекту</string>
    <string name="fix_volumes_completedvolume_text">Выполненный\nобъем работ</string>
    <string name="fix_volumes_result_text">Остаток\nпо объему</string>
    <string name="dialog_edit_row_label_main">Редактирование строки</string>
    <string name="editchangeplan_btn_delete">Удалить</string>
    <string name="editplanvalue_btn_edit">Редактировать</string>
    <string name="start_label_main">Основное меню</string>
    <string name="start_label_second">Ежедневная отчетность</string>
    <string name="start_btn_arrangement">Расстановка</string>
    <string name="start_btn_reports">Отчёты</string>
    <string name="start_btn_exit">Выход</string>
    <string name="settings_label_main">Настройки приложения</string>
    <string name="settings_themesettings_text">Настройки темы приложения</string>
    <string name="settings_light_text">Светлая тема</string>
    <string name="settings_btn_changeplanvalue">Изменить плановые значения</string>
    <string name="reports_label_main">Мои отчеты</string>
    <string name="reports_btn_choosedates">Выбрать даты</string>
    <string name="reports_btn_download">Скачать файл</string>
    <string name="reports_btn_mainmenu">Главное меню</string>
    <string name="send_report_label_main">Текущий отчет</string>
    <string name="change_plan_value_label_main">Плановые значения</string>
    <string name="change_plan_value_chooseobject_text">Выберите Объект</string>
    <string name="add_plan_value_label_main">Добавить Плановые значения</string>
    <string name="add_plan_value_btn_exit">Закрыть окно</string>
    <string name="registration_label_main">Регистрация</string>
    <string name="registration_btn_auth">Авторизоваться</string>
    <string name="registration_btn_registration">Зарегистрироваться</string>
</resources>