<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.General.ChangePlanValues.ChangePlanValuesFragment"
    >

    <!-- Направляющие -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_changePlanValues_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_plan_value_label_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        style="@style/mainLabel"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        />

    <!-- Комплекс работ: Заголовок   -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_chooseObject"
        android:layout_width="0dp"
        style="@style/ArrangementText"
        android:text="@string/change_plan_value_chooseobject_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintTop_toBottomOf="@id/tv_changePlanValues_Title"
        android:gravity="start"
        android:maxLines="1"

        />

    <!-- Комплекс работ: Тексовое поле   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Objects"
        android:layout_width="0dp"
        style="@style/TextInputLayout"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_chooseObject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:endIconMode="dropdown_menu"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteObjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="56dp"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            android:inputType="text"
            android:textColor="@color/color_black"
            android:importantForAccessibility="yes"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:hint="Выберите Объект"
            android:textColorHint="@color/background"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Заголовок таблицы -->

    <LinearLayout
        android:id="@+id/tableHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_Objects"
        android:layout_marginTop="26dp"
        style="@style/TableHeader"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/arrangement_object_text"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/ArrangementText"
            android:textSize="16dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeStepGranularity="2sp"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            style="@style/ArrangementText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/control_complexofwork_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/control_typeofwork_text"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/ArrangementText"
            android:textSize="16dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeStepGranularity="2sp"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fix_volumes_plan_text"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/ArrangementText"
            android:textSize="16dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeStepGranularity="2sp"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fix_volumes_measures_text"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/ArrangementText"
            android:textSize="16dp"

            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeStepGranularity="2sp"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="4dp"
            />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/all_fragments_actions_text"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/ArrangementText"
            android:textSize="16dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeStepGranularity="2sp"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="4dp"
            />
    </LinearLayout>


    <!-- RecyclerView для строк -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChangePlanValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_grey_dark"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintTop_toBottomOf="@id/tableHeader"
        android:layout_marginTop="0dp"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        style="@style/ExtraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/all_fragments_btn_next"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>