<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <!-- Направляющие: Горизонтальные -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"
        />

    <!-- Направляющие: Вертикальные -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67"
        />


    <!-- Заголовок -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_mainLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_label_main"
        android:layout_marginTop="70dp"
        android:gravity="center"
        style="@style/mainLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        />

    <!-- Подзаголовок -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_SecondLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_label_second"
        android:layout_marginTop="20dp"
        android:gravity="center"
        style="@style/secondLabel"
        app:layout_constraintTop_toBottomOf="@id/tv_mainLabel"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintBottom_toTopOf="@id/guideline_start"
        />

    <!-- Кнопки -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Arrangement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        android:text="@string/start_btn_arrangement"
        android:textSize="24sp"
        style="@style/MainsButton"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Reports"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        android:text="@string/start_btn_reports"
        android:textSize="24sp"
        style="@style/MainsButton"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_LogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        android:text="@string/start_btn_exit"
        android:textSize="24sp"
        style="@style/MainsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_right"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        />

    <ImageButton
        android:id="@+id/imb_Settings"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:maxHeight="90dp"
        android:layout_width="wrap_content"
        android:minWidth="50dp"
        android:maxWidth="90dp"
        android:src="@drawable/settings_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="24dp"
        android:backgroundTint="?android:background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
